--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifólio</title>
 </head>
+
 <body>
-    <h1>The best the power the of the king</h1>
-    <p>Hugo é demais !!!</p>
+    <header>
+        <img src="" alt="Minha foto de perfil">
+        <p>Eu sou o Hugo Duro Do Amaral</p>
+        <h1>Eu ensino Programação</h1>
+        <p>Sou professor da Escola Estadual Dr. João Pires de Camargo,em Araraquara, ministro aulas de Química, Física e Programação !</p>
+    </header>
 </body>
+
 </html>
