--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifólio</title>
@@ -13,8 +15,20 @@
         <img src="" alt="Minha foto de perfil">
         <p>Eu sou o Hugo Duro Do Amaral</p>
         <h1>Eu ensino Programação</h1>
-        <p>Sou professor da Escola Estadual Dr. João Pires de Camargo,em Araraquara, ministro aulas de Química, Física e Programação !</p>
+        <p>Sou professor da Escola Estadual Dr. João Pires de Camargo,em Araraquara, ministro aulas de Química, Física e
+            Programação !</p>
+        <p>Minhas habilidades</p>
+        <div>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+            <p>C# (C-Sharp)</p>
+        </div>
     </header>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
