--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 
 <body>
-    <header>
-        <img src="" alt="Minha foto de perfil">
+    <header class="container text-center">
+        <img src="" alt="Minha foto de perfil" class="rounded-circle" width="150" height="250">
         <p>Eu sou o Hugo Duro Do Amaral</p>
         <h1>Eu ensino Programação</h1>
         <p>Sou professor da Escola Estadual Dr. João Pires de Camargo,em Araraquara, ministro aulas de Química, Física e
             Programação !</p>
         <p>Minhas habilidades</p>
         <div>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>JavaScript</p>
-            <p>C# (C-Sharp)</p>
+            <p class="badge bg-secondary">HTML</p>
+            <p class="badge bg-secondary">CSS</p>
+            <p class="badge bg-secondary">JavaScript</p>
+            <p class="badge bg-secondary">C# (C-Sharp)</p>
         </div>
     </header>
 
